Bug: PRD Reviewer: Lynn Comment: minor update to the spacing in the partial description css for the what's new list.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -332,7 +332,7 @@
 	color: #454545;
 	font-size: 13px;
 	/* reduce size for Filr only */
-	height: .2em;
+	height: .1em;
 	margin-top: 4px;
 	margin-left: 1px;
 	overflow: hidden;
